--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-asset": "^2.1.1",
     "react-native-calendars": "^1.1300.0",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-toast-message": "^2.1.6",
