--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.72.4",
     "react-native-asset": "^2.1.1",
     "react-native-calendars": "^1.1300.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^4.7.1",
