--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/lodash": "^4.14.197",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "formik": "^2.4.3",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-asset": "^2.1.1",
     "react-native-calendars": "^1.1300.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-maps": "^1.7.1",
     "react-native-masked-text": "^1.13.0",
+    "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-toast-message": "^2.1.6",
