--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
-    "@react-native-community/datetimepicker": "^7.4.2",
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-native-firebase/app": "^18.3.2",
     "@react-native-firebase/messaging": "^18.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-maps": "^1.7.1",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
